5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1798_2565.log
== TEST (2019-06-05 14:49:14) 
-- CODE:
from numpy import*
vet1= array(eval(input("Medias finais: ")))
vet2= array(eval(input("Presenca:")))
vet3= int(input("Carga horaria:"))
m=0
p=0
c=0

for i in range(size(vet1)):
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:53:26) 
-- CODE:
from numpy import*
vet1= array(eval(input("Medias finais: ")))
vet2= array(eval(input("Presenca:")))
ch= int(input("Carga horaria:"))
m=0
p=0
c=0

v = zeros(3)

for i in range(size(vet1)):
	y = ch*75/100
	if(vet1[i]>=5 and vet2

-- ERROR:
File "XXXX", line 14
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:53:41) 
-- CODE:
from numpy import*
vet1= array(eval(input("Medias finais: ")))
vet2= array(eval(input("Presenca:")))
ch= int(input("Carga horaria:"))
m=0
p=0
c=0

v = zeros(3, dtype=int)

for i in range(size(vet1)):
	y = ch*75/100
	if(vet1[i]>=5 and vet2

-- ERROR:
File "XXXX", line 14
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:58:10) 
-- CODE:
from numpy import*
vet1= array(eval(input("Medias finais: ")))
vet2= array(eval(input("Presenca:")))
ch= int(input("Carga horaria:"))
ap=0
rn=0
rf=0

v = zeros(3, dtype=int)

for i in range(size(vet1)):
	y = ch*75/100
	if(vet1[i]>=5 and vet2[i]>=y):
		ap = ap+1
	elif(vet1[i]<5):
		rn = rn+1
	elif(vet[1]<=y):
		rf = rf+1
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:58:50) 
-- CODE:
from numpy import*
vet1= array(eval(input("Medias finais: ")))
vet2= array(eval(input("Presenca:")))
ch= int(input("Carga horaria:"))
ap=0
rn=0
rf=0

v = zeros(3, dtype=int)

for i in range(size(vet1)):
	y = ch*75/100
	if(vet1[i]>=5 and vet2[i]>=y):
		ap = ap+1
	elif(vet1[i]<5):
		rn = rn+1
	elif(vet1[i]<=y):
		rf = rf+1
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:59:19) 
-- CODE:
from numpy import*
vet1= array(eval(input("Medias finais: ")))
vet2= array(eval(input("Presenca:")))
ch= int(input("Carga horaria:"))
ap=0
rn=0
rf=0

v = zeros(3, dtype=int)

for i in range(size(vet1)):
	y = ch*75/100
	if(vet1[i]>=5 and vet2[i]>=y):
		ap = ap+1
		print(ap)
	elif(vet1[i]<5):
		rn = rn+1
	elif(vet1[i]<=y):
		rf = rf+1
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:59:49) 
-- CODE:
from numpy import*
vet1= array(eval(input("Medias finais: ")))
vet2= array(eval(input("Presenca:")))
ch= int(input("Carga horaria:"))
ap=0
rn=0
rf=0

v = zeros(3, dtype=int)

for i in range(size(vet1)):
	y = ch*75/100
	if(vet1[i]>=5 and vet2[i]>=y):
		ap = ap+1
		print(ap)
	elif(vet1[i]<5):
		rn = rn+1
	elif(vet1[i]<=y):
		rf = rf+1
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:06:03) 
-- CODE:
from numpy import*
vet1= array(eval(input("Medias finais: ")))
vet2= array(eval(input("Presenca:")))
ch= int(input("Carga horaria:"))
ap=0
rn=0
rf=0

v = zeros(3, dtype=int)

for i in range(size(vet1)):
	y = ch*75/100
	if(vet1[i]>=5 and vet2[i]>=y):
		ap = ap+1
	elif(vet1[i]<5 and vet2[i]>=y):
		rn = rn+1
	elif(vet2[i]<y and vet1[i]>=5 ):
		rf = rf+1
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:06:07) 
-- CODE:
from numpy import*
vet1= array(eval(input("Medias finais: ")))
vet2= array(eval(input("Presenca:")))
ch= int(input("Carga horaria:"))
ap=0
rn=0
rf=0

v = zeros(3, dtype=int)

for i in range(size(vet1)):
	y = ch*75/100
	if(vet1[i]>=5 and vet2[i]>=y):
		ap = ap+1
	elif(vet1[i]<5 and vet2[i]>=y):
		rn = rn+1
	elif(vet2[i]<y and vet1[i]>=5):
		rf = rf+1
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:10:16) 
-- CODE:
from numpy import*
vet1= array(eval(input("Medias finais: ")))
vet2= array(eval(input("Presenca:")))
ch= int(input("Carga horaria:"))
ap=0
rn=0
rf=0

v = zeros(3, dtype=int)

for i in range(size(vet1)):
	y = ch*75/100
	if(vet1[i]>=5 and vet2[i]>=y):
		ap = ap+1
	elif(vet1[i]<5):
		rn = rn+1
	elif(vet2[i]<y):
		rf = rf+1
v[0]=ap
v[1]=rn
v[2]=rf
print(t)
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:10:52) 
-- CODE:
from numpy import*
vet1= array(eval(input("Medias finais: ")))
vet2= array(eval(input("Presenca:")))
ch= int(input("Carga horaria:"))
ap=0
rn=0
rf=0

v = zeros(3, dtype=int)

for i in range(size(vet1)):
	y = ch*75/100
	if(vet1[i]>=5 and vet2[i]>=y):
		ap = ap+1
	elif(vet1[i]<5):
		rn = rn+1
	elif(vet2[i]<y):
		rf = rf+1
v[0]=ap
v[1]=rn
v[2]=rf
print(v)
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:11:17) 
-- CODE:
from numpy import*
vet1= array(eval(input("Medias finais: ")))
vet2= array(eval(input("Presenca:")))
ch= int(input("Carga horaria:"))
ap=0
rn=0
rf=0

v = zeros(3, dtype=int)

for i in range(size(vet1)):
	y = ch*75/100
	if(vet1[i]>=5 and vet2[i]>=y):
		ap = ap+1
	elif(vet1[i]<5):
		rn = rn+1
	elif(vet2[i]<y):
		rf = rf+1
v[0]=ap
v[1]=rn
v[2]=rf
print(v)
		
		

-- EXECUTION TIME:
1.11551
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
